# onetcli-extensions

./: .gitignore  2026-06-14-extension-repository-split.md  Cargo.toml  README.md  README.zh-CN.md  go.mod  go.sum  manifest.json
.codex/skills/ipc-driver-development/: SKILL.md
.codex/skills/ipc-driver-development/references/: manifest.md  protocol.md
.github/workflows/: ci.yml  release.yml  upload-r2.yml
cmd/oceanbase-ipc-driver/: main.go  register_oceanbase.go
cmd/oracle-go-ipc-driver/: main.go  register_oracle_go.go
cmd/oracle-ipc-driver/: register_oracle.go
extensions/ipc/dm/: driver.json
extensions/ipc/duckdb/: Cargo.toml  driver.json  extension.build.json
extensions/ipc/duckdb/locales/: en.yml  zh-CN.yml  zh-HK.yml
extensions/ipc/duckdb/src/: data_import.rs  data_import_support.rs  ddl.rs  driver.rs  duckdb_session.rs  handlers.rs  lib.rs  main.rs  metadata.rs  protocol.rs  result.rs  server.rs  state.rs  value.rs
extensions/ipc/duckdb/tests/: all_declared_methods.rs  cancel_timeout.rs  extension_protocol.rs
extensions/ipc/gbase8s/: driver.json  extension.build.json
extensions/ipc/gbase8s/locales/: en.yml  zh-CN.yml  zh-HK.yml
extensions/ipc/iotdb/: Cargo.toml  driver.json
extensions/ipc/iotdb/locales/: en.yml  zh-CN.yml  zh-HK.yml
extensions/ipc/iotdb/src/: driver.rs  handlers.rs
extensions/ipc/iotdb/tests/: local_iotdb_integration.rs
extensions/ipc/kingbase/: driver.json
extensions/ipc/oceanbase/: driver.json  extension.build.json
extensions/ipc/oceanbase/locales/: en.yml  zh-CN.yml  zh-HK.yml
extensions/ipc/opengauss/: Cargo.toml  driver.json
extensions/ipc/opengauss/tests/: extension_protocol.rs
extensions/ipc/oracle/: driver.json  extension.build.json
extensions/ipc/oracle-go/: driver.json  extension.build.json
extensions/ipc/oracle-go/locales/: en.yml  zh-CN.yml  zh-HK.yml
extensions/ipc/oracle/locales/: en.yml  zh-CN.yml  zh-HK.yml
extensions/remote-desktop/rdp/: extension.build.json  remote_desktop_provider.json
extensions/remote-desktop/rdp-helper/: Cargo.toml
extensions/remote-desktop/rdp-helper/src/: clipboard.rs  main.rs  pixels.rs  protocol.rs  rdp.rs
extensions/remote-desktop/vnc/: extension.build.json  remote_desktop_provider.json
extensions/remote-desktop/vnc-helper/: Cargo.toml
extensions/remote-desktop/vnc-helper/src/: framebuffer.rs  main.rs  protocol.rs  runtime.rs  vnc_encoding.rs  vnc_input.rs  vnc_keyboard.rs  vnc_rfb.rs
internal/dbipc/: config.go  data.go  ddl.go  errors.go  query.go  server.go  server_test.go
internal/drivers/dm/: spec.go
internal/drivers/kingbase/: config_test.go  spec.go
internal/drivers/oceanbase/: config_test.go  integration_test.go  spec.go
internal/drivers/oracle/: config_test.go  spec.go
internal/ipc/: socket.go  socket_notwindows.go  socket_test.go  socket_windows.go
ipc-driver-development/: SKILL.md
ipc-driver-development/agents/: openai.yaml
ipc-driver-development/references/: language-patterns.md  manifest.md  protocol.md  testing-packaging.md
java/gbase8s-ipc-driver/: pom.xml
java/gbase8s-ipc-driver/src/main/java/com/onetcli/gbase8s/: GBase8sDriverMain.java
java/gbase8s-ipc-driver/src/main/java/com/onetcli/gbase8s/db/: JdbcQueryRunner.java  QueryResult.java
java/gbase8s-ipc-driver/src/main/java/com/onetcli/gbase8s/ipc/: FramedJsonTransport.java
java/gbase8s-ipc-driver/src/main/java/com/onetcli/gbase8s/jdbc/: DriverLoader.java  GBase8sConfig.java  GBase8sJdbcConnectionFactory.java  GBase8sJdbcUrl.java
java/gbase8s-ipc-driver/src/main/java/com/onetcli/gbase8s/schema/: GBase8sSchemaSql.java
java/gbase8s-ipc-driver/src/main/java/com/onetcli/gbase8s/server/: GBase8sIpcServer.java  JdbcConnectionFactory.java  ProtocolError.java
java/gbase8s-ipc-driver/src/main/java/com/onetcli/gbase8s/socket/: HostSocket.java  HostSocketConnector.java  JnaUnixSocket.java  WindowsNamedPipeSocket.java
java/gbase8s-ipc-driver/src/test/java/com/onetcli/gbase8s/: GBase8sDriverMainTest.java  LauncherScriptTest.java  TestFiles.java
java/gbase8s-ipc-driver/src/test/java/com/onetcli/gbase8s/db/: JdbcQueryRunnerTest.java
java/gbase8s-ipc-driver/src/test/java/com/onetcli/gbase8s/ipc/: FramedJsonTransportTest.java
java/gbase8s-ipc-driver/src/test/java/com/onetcli/gbase8s/jdbc/: DriverLoaderTest.java  GBase8sJdbcConnectionFactoryTest.java  GBase8sJdbcUrlTest.java
java/gbase8s-ipc-driver/src/test/java/com/onetcli/gbase8s/schema/: GBase8sSchemaSqlTest.java
scripts/: build-go-driver.sh  build-java-driver.sh  changed-extensions.mjs  generate-marketplace-manifest.mjs  install-local-drivers.sh  merge-marketplace-manifest.mjs  package-driver.sh  package-remote-desktop-provider.sh  release-driver.mjs  verify-package.sh  verify-remote-desktop-provider-package.sh
tests/: scripts.test.mjs
(+2 files in other folders)
