[workspace]
members = [
    "extensions/ipc/duckdb",
    "extensions/ipc/iotdb",
    "extensions/ipc/opengauss",
]
resolver = "2"

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
base64 = "0.22"
chrono = { version = "0.4.23", features = ["serde"] }
duckdb = { version = "1.10501.0", features = ["bundled"] }
extension-driver = { git = "https://github.com/feigeCode/onetcli", branch = "dev-ipc", package = "extension-driver" }
extension-host = { git = "https://github.com/feigeCode/onetcli", branch = "dev-ipc", package = "extension-host" }
extension-protocol = { git = "https://github.com/feigeCode/onetcli", branch = "dev-ipc", package = "extension-protocol" }
hex = "0.4"
interprocess = { version = "2.4.0", features = ["tokio"] }
iotdb = "0.0.7"
native-tls = { version = "0.2", features = ["vendored"] }
opengauss-native-tls = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio-opengauss = { version = "0.1.0", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio = { version = "1", features = ["io-util", "rt-multi-thread", "macros", "sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
