[package]
name = "duckdb_driver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
extension-driver.workspace = true
extension-protocol.workspace = true
hex.workspace = true
interprocess.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "rt-multi-thread", "macros", "sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true

duckdb.workspace = true

[dev-dependencies]
extension-host.workspace = true
tempfile = "3"
uuid.workspace = true
