[package]
name = "iotdb_driver"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow.workspace = true
base64.workspace = true
extension-driver.workspace = true
extension-protocol.workspace = true
interprocess.workspace = true
iotdb.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "rt-multi-thread", "macros", "sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
extension-host.workspace = true
