[package]
name = "onetcli-rdp-helper"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
anyhow = "1"
base64 = "0.22"
ironrdp = { git = "https://github.com/Devolutions/IronRDP", rev = "8fe59c19e253aa106a0a94c72dd0f962b881794c", features = [
    "connector",
    "input",
    "pdu",
] }
ironrdp-client = { git = "https://github.com/Devolutions/IronRDP", rev = "8fe59c19e253aa106a0a94c72dd0f962b881794c", default-features = false, features = [
    "native-tls",
] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
whoami = "1"
